# viskoz-cli

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  README.md  Taskfile.yaml  build.rs
src/: config.rs  main.rs  runner.rs
src/cli/: connect.rs  mod.rs  start.rs  status.rs  stop.rs
src/grpc/: mod.rs
src/platform/: linux.rs  mod.rs  windows.rs
src/runner/: mod.rs
src/tailscale/: mod.rs
