[package]
name = "viskoz-cli"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "viskoz-cli"
path = "src/main.rs"
 
[dependencies]
dirs = "6.0.0"

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }
 
# Async runtime
tokio = { version = "1.52.3", features = ["full"] }
 
# gRPC
tonic = "0.14.6"
prost = "0.14.3"
tonic-prost = "0.14.6"
 
# Docker
bollard = "0.21.0"

base64 = "0.22"

# Serde / Config
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2+spec-1.1.0"
 
# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
 
# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"
futures-util = "0.3.32"
uuid =  { version = "1.23.2", features = ["v4"] }
 
# Platform
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Threading", "Win32_UI_Shell"] }
 
[build-dependencies]
tonic-prost-build = "0.14.6" 



